# eshop

./: README.MD  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: authorization_code_model.py  users_model.py
app/routers/: auth.py  users.py
app/schemas/: users_schema.py
app/services/: auth_service.py  users_service.py
tests/: test_users.py
