[tool.poetry]
name = "eshop"
version = "0.1.0"
description = "leaning python framework and language"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.122.0"
sqlalchemy = "^2.0.44"
pytest = "^9.0.1"
httpx = "^0.28.1"
pydantic = {extras = ["email"], version = "^2.12.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
